--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "@sanity/client": "^7.11.2",
     "axios": "^1.12.2",
+    "groq": "^4.9.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
