--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@sanity/client": "^7.11.2",
     "axios": "^1.12.2",
     "groq": "^4.9.0",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^16.0.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
