--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@iconify/react": "^6.0.2",
     "@sanity/client": "^7.11.2",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.25",
     "groq": "^4.9.0",
-    "next": "^16.0.7",
+    "next": "^16.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
